--- a/index.html
+++ b/index.html
@@ -2,10 +2,114 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Документ без названия</title>
-<link href="css/style.css" type="text/css" rel="stylesheet">
+<title>Мой лендинг</title>
+<!--<link href="css/style.css" type="text/css" rel="stylesheet">-->
 </head>
 <body>
+<div class="wrapper">
+	<!-- header
+- логотип (создать логотип для страницы)
+- меню 
 
+-->
+	<header>
+	<!-- логотип (создать логотип для страницы) -->
+		<div class="logo">
+		<a href="#">
+		<img src="image/logo.png" height="100%" width="100%" alt="шарашкина кантора"></a>
+			
+		
+		</div>
+		<nav> 
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">About Us</a></li>
+				<li><a href="#">Отзывы</a></li>
+				<li><a href="#">Обратная свзяь</a></li>
+			</ul>
+		</nav>
+	</header>
+	<!-- conten
+
+- "каруселька"
+- статья (статьи) 
+- отзывы "благодарных" клиентов
+- форма обратной связи
+
+
+ -->
+
+	<main>
+		<section class="karusel">
+		<!-- разместить iframe с возможностью просмотра страниц -->
+		<iframe src="https://www.youtube.com/embed/zS7b64V5fo8" frameborder="0" allowfullscreen name="karusel" width="50%" height="270">
+			<!-- надо ли тут чтото разместить? -->
+		</iframe>
+		<br>
+		<a href="#">Кадр 1</a>
+		<a href="#">Кадр 2</a>
+		<a href="#">Кадр 3</a>
+		</section>
+		<article>
+		<h1>Заголовок</h1>
+		<p>Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое. Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой коричневый, выпуклый, разделенный дугообразными чешуйками живот, на верхушке которого еле держалось готовое вот-вот окончательно сползти одеяло.</p>
+
+<p>Его многочисленные, убого тонкие по сравнению с остальным телом ножки беспомощно копошились у него перед глазами. «Что со мной случилось? » – подумал он. Это не было сном. Его комната, настоящая, разве что слишком маленькая, но обычная комната, мирно покоилась в своих четырех хорошо знакомых стенах.</p>
+
+<p>Над столом, где были разложены распакованные образцы сукон – Замза был коммивояжером, – висел портрет, который он недавно вырезал из иллюстрированного журнала и вставил в красивую золоченую рамку. На портрете была изображена дама в меховой шляпе и боа, она сидела очень прямо и протягивала зрителю тяжелую меховую муфту, в которой целиком исчезала ее рука. Затем взгляд Грегора устремился в окно, и пасмурная погода – слышно было, как по жести подоконника стучат капли дождя – привела его и вовсе в грустное настроение. «Хорошо бы еще немного поспать и забыть всю эту чепуху», – подумал он, но это было совершенно неосуществимо, он привык спать на правом боку, а в теперешнем своем</p>
+		</article>
+		<section class="отзывы">
+		<table border="0" width="100%">
+			<tr><td><img src="image/man.png" height="100%" width="100%" alt="клиент 1"></td><td><p>Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое. Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой коричневый, выпуклый, разделенный дугообразными чешуйками живот, на верхушке которого еле держалось готовое вот-вот окончательно сползти одеяло.</p></td>
+			</tr>
+			<td><p>Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое. Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой коричневый, выпуклый, разделенный дугообразными чешуйками живот, на верхушке которого еле держалось готовое вот-вот окончательно сползти одеяло.</p></td><td><img src="image/man2.png" height="100%" width="100%" alt="клиент 2"></td></tr>
+		</table>
+	
+	</section>
+
+		<section class="forma">
+		<!--  создать форму заказа обратного звонка. форма будет состоять из полей:
+
+		-имя
+		-телефон
+		-дата/время
+		-кнопка "отправить заявку" (разработать дизайн кнопки)
+		-->
+		</section>
+
+
+	</main>
+	
+	
+	
+
+
+	<!-- footer
+- копирайт
+- меню
+- логотип
+
+ --> 
+ <footer>
+	<!-- логотип (создать логотип для страницы) -->
+		<div class="logo">
+		<a href="#">
+		<img src="image/logo.png" height="100%" width="100%" alt="шарашкина кантора"></a>
+			
+		
+		</div>
+		<nav> 
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">About Us</a></li>
+				<li><a href="#">Отзывы</a></li>
+				<li><a href="#">Обратная свзяь</a></li>
+			</ul>
+		</nav>
+		<div class="copyR">
+		<p> Данный сайт мой разработан мной и 2017</p>
+		</div>
+	</footer>
+ </div>
 </body>
 </html>
